# C_project1

./: .test.c.swp  CMakeLists.txt  README.md  main.c  readme.txt  socket_client  socket_client.c  socket_server  socket_server.c  test  test.c  test.txt
src/: CMakeLists.txt  geom.c  geom.h  readFile.c  readFile.h  tool.c  tool.h
src/study/: CMakeLists.txt  dls.c  logger.c  logger.h  socket_client.c  socket_client.h  socket_study.c  socket_study.h  zlib_test.c  zlib_test.h
src/study/gdal/: CMakeLists.txt  gdal_demo.c  gdal_demo.h
src/study/geos/: CMakeLists.txt  geos_demo  geos_demo.c  geos_demo.h
